tests/golden/compile-pass/option_coalesce_optional_chain.rua
struct Profile {
    city: String,
}

impl Profile {
    fn label(&self, suffix: String) -> String {
        self.city + suffix
    }
}

let profile: Option<Profile> = Option::Some(Profile { city: "Shanghai" });
let missing: Option<Profile> = Option::None;
let disabled: Option<bool> = Option::Some(false);

println!("{}", disabled ?? true);
println!("{}", profile?.city ?? "unknown");
println!("{}", missing?.label("!") ?? "unknown");
