tests/golden/compile-fail/type_optional_chain_non_option.rua
struct Profile {
    city: String,
}

fn invalid(profile: Profile) -> String {
    profile?.city
}
